--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
-
 {
   "name": "background_remover",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.3",
     "shadcn-ui": "^0.9.4"
   },
   "devDependencies": {
